--- a/react-todo-list/public/index.html
+++ b/react-todo-list/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://www.clipartmax.com/png/small/422-4223456_to-do-list-vector-todo-list-logos.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="An advanced todo list application made with react. It allows for categorization of tasks. Additionally users can also change and add due Dates."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" src="https://www.clipartmax.com/png/small/422-4223456_to-do-list-vector-todo-list-logos.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Todo List v2</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
